--- a/src/Hero/Hero.css
+++ b/src/Hero/Hero.css
@@ -5,13 +5,15 @@
     align-items: center; /* Center content vertically */
     justify-content: center; /* Center content horizontally */
     overflow: hidden; /* Prevent any overflow */
+    color: white;
   }
   
-  .hero-image {
-    width: auto;
-    max-width: 90%; /* Limit the width to 90% of the container */
-    height: auto;
-    max-height: 90%; /* Limit the height to 60% of the hero section */
-    object-fit: contain; /* Maintain the aspect ratio */
+  .card img {
+    max-height: 60%; /* Adjusted for better proportion */
+    border-radius: 4px;
+    margin-bottom: 8px; /* Space between image and title */
+    object-fit: cover;
+    width: 100%; /* Ensures the image fits the card width */
+    filter: saturate(1.5) contrast(1.2); /* Enhances colors and contrast */
   }
   
