--- a/src/Hero/Hero.css
+++ b/src/Hero/Hero.css
@@ -1,22 +1,24 @@
 .hero {
-    background-color: black; /* Black background */
-    height: 30vh; /* Adjusted height to be 70% of the viewport */
     display: flex;
-    align-items: center; /* Center content vertically */
-    justify-content: center; /* Center content horizontally */
-    overflow: hidden; /* Prevent any overflow */
-    color: white;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: black; /* Set background color to black */
+    justify-content: center; 
   }
   
-  .card img {
-    max-height: 60%; /* Adjusted for better proportion */
-    border-radius: 4px;
-    margin-bottom: 8px; /* Space between image and title */
-    object-fit: cover;
-    width: 100%; /* Ensures the image fits the card width */
-    filter: saturate(1.5) contrast(1.2); /* Enhances colors and contrast */
+  .text-container {
+    flex: 1;
+    color: white; /* Set font color to white */
   }
-  .song-container h1 {
-    color: black;
+  
+  .hero h1 {
+    margin: 10px 0; /* Add spacing between the lines */
+  }
+  
+  .hero-image {
+    flex: 0 0 auto;
+    max-width: 50%;
+    height: auto;
   }
   
