--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -5,8 +5,8 @@
     text-align: center;
     color: white;
     font-size: 0.7rem; /* Readable font size */
-    height: 220px;
-    width: 120px; /* Reduced width for a compact look */
+    height: 300px;
+    width: 150px; /* Reduced width for a compact look */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,15 +17,16 @@
   }
   
   .card img {
-    max-height: 60%; /* Adjusted for better proportion */
+    width: 100%;
+    height: 70%; /* Adjusted for better proportion */
     border-radius: 4px;
     margin-bottom: 8px; /* Space between image and title */
     object-fit: cover;
-    width: 100%; /* Ensures the image fits the card width */
+
   }
   
   .card-title {
-    font-size: 0.7rem; /* Maintain consistent font size */
+    font-size: 1rem; /* Maintain consistent font size */
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
