--- a/src/Songs/Songs.css
+++ b/src/Songs/Songs.css
@@ -67,13 +67,13 @@
   
   .card {
 
-
+    flex: 0 0 calc(100% / 7 - 55px);
     overflow: hidden;
     text-align: center;
     background-color: rgb(0, 0, 0);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light shadow effect */
     flex-shrink: 0; /* Prevent cards from shrinking */
-    width: 130px; /* Fixed card width */
+    width: 250x; /* Fixed card width */
     scroll-snap-align: center; /* Align card in the center on scroll */
   }
   
